WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191105
[Win][WKL] DOMHTMLDocument::setNodeValue does infinite recursion
https://bugs.webkit.org/show_bug.cgi?id=191105
Summary
[Win][WKL] DOMHTMLDocument::setNodeValue does infinite recursion
Fujii Hironori
Reported
2018-10-31 03:09:06 PDT
[Win][WKL] DOMHTMLDocument::setNodeValue does infinite recursion clang-cl detects an infinite recursion of DOMHTMLDocument::setNodeValue.
> In file included from ..\..\Source\WebKitLegacy\win\DOMHTMLClasses.cpp:27: > ..\..\Source\WebKitLegacy\win/DOMHTMLClasses.h(229,5): warning: all paths through this function will call itself [-Winfinite-recursion] > { > ^
Attachments
Patch
(1.34 KB, patch)
2018-10-31 03:50 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2018-10-31 03:09:34 PDT
This code has introduced in
https://github.com/WebKit/webkit/commit/fee2e824695f7bfa0f9062b36322874cfbd3733c
Fujii Hironori
Comment 2
2018-10-31 03:50:50 PDT
Created
attachment 353482
[details]
Patch
Ross Kirsling
Comment 3
2018-10-31 11:32:45 PDT
Comment on
attachment 353482
[details]
Patch Informal r+. That's a strange mistake, but I'm glad clang is finding things that MSVC didn't!
Brent Fulgham
Comment 4
2018-10-31 11:59:16 PDT
Comment on
attachment 353482
[details]
Patch Wow! How did that ever work?
Fujii Hironori
Comment 5
2018-10-31 18:03:52 PDT
Thank you for the review. (In reply to Brent Fulgham from
comment #4
)
> Wow! How did that ever work?
I guess this is a unused API.
Fujii Hironori
Comment 6
2018-10-31 18:21:00 PDT
Comment on
attachment 353482
[details]
Patch Clearing flags on attachment: 353482 Committed
r237666
: <
https://trac.webkit.org/changeset/237666
>
Fujii Hironori
Comment 7
2018-10-31 18:21:03 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2018-10-31 18:22:49 PDT
<
rdar://problem/45718605
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug