[Win][WKL] DOMHTMLDocument::setNodeValue does infinite recursion https://bugs.webkit.org/show_bug.cgi?id=191105

Reviewed by Brent Fulgham.

* DOMHTMLClasses.h:
(DOMHTMLDocument::setNodeValue): Call DOMDocument::setNodeValue
instead of own setNodeValue.

Canonical link: https://commits.webkit.org/205948@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237666 268f45cc-cd09-0410-ab3c-d52691b4dbfc